force-app/main/default/objects/Quote/fields/ApprovalRequestComments__c.field-meta.xml
<CustomField>
    <fullName>ApprovalRequestComments__c</fullName>
    <description>Comentarios para solicitar aprobación de la cotización.</description>
    <label>Comentarios de solicitud de aprobación</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>