force-app/main/default/objects/Quote/fields/ApprovalRequestDate__c.field-meta.xml
<CustomField>
    <fullName>ApprovalRequestDate__c</fullName>
    <description>Fecha en que se solicitó la aprobación de la cotización.</description>
    <label>Fecha de envío para aprobación</label>
    <type>DateTime</type>
</CustomField>