force-app/main/default/objects/Quote/fields/ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatus__c</fullName>
    <description>Estado del proceso de aprobación actual para la cotización.</description>
    <label>Estado de aprobación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Aprobada</fullName>
            </value>
            <value>
                <fullName>Rechazada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>