force-app/main/default/objects/Quote/fields/CantidadTarjetas__c.field-meta.xml
<CustomField>
    <fullName>CantidadTarjetas__c</fullName>
    <label>Cantidad de tarjetas o chequeras</label>
    <summarizedField>QuoteLineItem.CantidadTarjetas__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>