force-app/main/default/objects/Quote/fields/Comision_por_Servicio__c.field-meta.xml
<CustomField>
    <fullName>Comision_por_Servicio__c</fullName>
    <label>Comisión por Servicio</label>
    <summarizedField>QuoteLineItem.Comision_por_Servicio__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>