force-app/main/default/objects/Quote/fields/Familia__c.field-meta.xml
<CustomField>
    <fullName>Familia__c</fullName>
    <label>Familia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CategoriaSolucion</valueSetName>
    </valueSet>
</CustomField>