force-app/main/default/objects/Quote/fields/GrantedApprovalLevel__c.field-meta.xml
<CustomField>
    <fullName>GrantedApprovalLevel__c</fullName>
    <description>Nivel de aprobación que ha sido otorgado a la cotización.</description>
    <label>Nivel de aprobación otorgado</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>