force-app/main/default/objects/Quote/fields/IDInterno__c.field-meta.xml
<CustomField>
    <fullName>IDInterno__c</fullName>
    <externalId>true</externalId>
    <label>ID Interno</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>