force-app/main/default/objects/Quote/fields/IdPDFContrato__c.field-meta.xml
<CustomField>
    <fullName>IdPDFContrato__c</fullName>
    <label>Id PDF Contrato</label>
    <length>20</length>
    <type>Text</type>
</CustomField>