force-app/main/default/objects/Quote/fields/IdPDFPropuestaComercial__c.field-meta.xml
<CustomField>
    <fullName>IdPDFPropuestaComercial__c</fullName>
    <label>Id PDF Propuesta Comercial</label>
    <length>20</length>
    <type>Text</type>
</CustomField>