force-app/main/default/objects/Quote/fields/LastApproverName__c.field-meta.xml
<CustomField>
    <fullName>LastApproverName__c</fullName>
    <description>Nombre del último aprobador de la cotización (persona que aprueba o rechaza).</description>
    <label>Nombre del último aprobador</label>
    <length>100</length>
    <type>Text</type>
</CustomField>