force-app/main/default/objects/Quote/fields/NumberOfShipments__c.field-meta.xml
<CustomField>
    <fullName>NumberOfShipments__c</fullName>
    <description>Campo resumen que sumariza los números de envíos de los productos de la cotización.</description>
    <label>Número de envíos</label>
    <summarizedField>QuoteLineItem.NumberOfShipments__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>