force-app/main/default/objects/Quote/fields/OpportunityLink__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLink__c</fullName>
    <description>URL de la oportunidad relacionada a la cotización.</description>
    <formula>LEFT($Api.Partner_Server_URL_340, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_340)) &amp; OpportunityId</formula>
    <label>URL de la oportunidad</label>
    <type>Text</type>
</CustomField>