force-app/main/default/objects/Quote/fields/OpportunityName__c.field-meta.xml
<CustomField>
    <fullName>OpportunityName__c</fullName>
    <description>Nombre de la oportunidad a la que está ligada la cotización.</description>
    <formula>Opportunity.Name</formula>
    <label>Nombre de la oportunidad</label>
    <type>Text</type>
</CustomField>