force-app/main/default/objects/Quote/fields/QuoteCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>QuoteCreatedDate__c</fullName>
    <description>Campo creado para ser utilizado en las vistas de lista de cotización.</description>
    <formula>CreatedDate</formula>
    <label>Fecha de creación de la cotización</label>
    <type>DateTime</type>
</CustomField>