force-app/main/default/objects/Quote/fields/RequiredApprovalLevel__c.field-meta.xml
<CustomField>
    <fullName>RequiredApprovalLevel__c</fullName>
    <description>Nivel de aprobación que requiere la cotización.</description>
    <label>Nivel de aprobación requerido</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>