force-app/main/default/objects/Quote/listViews/Aprobaciones_pendientes.listView-meta.xml
<ListView>
    <fullName>Aprobaciones_pendientes</fullName>
    <columns>ApprovalRequestDate__c</columns>
    <columns>QUOTE.NAME</columns>
    <columns>Familia__c</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <columns>Comision_por_Servicio__c</columns>
    <columns>RequiredApprovalLevel__c</columns>
    <columns>ApprovalStatus__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>LastApproverName__c</columns>
    <columns>CreatedBy</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ApprovalStatus__c</field>
        <operation>equals</operation>
        <value>Pendiente</value>
    </filters>
    <label>Aprobaciones pendientes</label>
</ListView>