force-app/main/default/objects/Quote/listViews/Historial_de_Aprobaciones.listView-meta.xml
<ListView>
    <fullName>Historial_de_Aprobaciones</fullName>
    <columns>ApprovalRequestDate__c</columns>
    <columns>QUOTE.NAME</columns>
    <columns>Familia__c</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <columns>Comision_por_Servicio__c</columns>
    <columns>RequiredApprovalLevel__c</columns>
    <columns>ApprovalStatus__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>LastApproverName__c</columns>
    <columns>CreatedBy</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ApprovalStatus__c</field>
        <operation>equals</operation>
        <value>Pendiente,Aprobada,Rechazada</value>
    </filters>
    <label>Historial de Aprobaciones</label>
</ListView>